--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -68,6 +68,8 @@
             </LinearLayout>
 
 
+            <include layout="@layout/line_bg" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
@@ -75,23 +77,26 @@
                 android:background="@drawable/button_selector_white_gray"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:padding="12dp"
-                android:visibility="gone">
+                android:padding="12dp">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="访客可随意进"
+                    android:text="允许访客进门"
                     android:textColor="#515151"
                     android:textSize="18sp" />
 
-                <android.support.v7.widget.SwitchCompat
+                <Switch
                     android:id="@+id/visitorIn"
+                    android:checked="false"
+                    android:switchMinWidth="55dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
+            <include layout="@layout/line_bg" />
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -100,21 +105,22 @@
                 android:background="@drawable/button_selector_white_gray"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:padding="12dp"
-                android:visibility="gone">
+                android:padding="12dp">
 
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="访客可随意出"
+                    android:text="允许访客出门"
                     android:textColor="#515151"
                     android:textSize="18sp" />
 
-                <android.support.v7.widget.SwitchCompat
+                <Switch
                     android:id="@+id/visitorOut"
+                    android:checked="false"
+                    android:switchMinWidth="55dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
             <include layout="@layout/line_bg" />
